Fixed card height. Attempt at vertical alignment of icons and text

--- a/static/css/digimarks.css
+++ b/static/css/digimarks.css
@@ -1,12 +1,4 @@
 
-.tag
-{
-    color: #1b5e20; /* green darken-4 */
-    background-color: #c8e6c9; /* green lighten-3 */
-    padding: 2px;
-    border-radius: 5px;
-}
-
   /* label color */
    .input-field label {
      color: #000;
@@ -47,4 +39,9 @@
    .white-text .chip a
    {
        color: #1b5e20; /* green darken-4 */
+   }
+
+   .card.tiny
+   {
+       height: 160px;
    }
